Ton of fixes and additions
1. Fixed issue when "queue.json" was empty/didn't exist and was created empty, the program would crash.
2. Modularized entire code base. Was going to code everything in "app.py" but thought that would be a bad idea, heh.
3. Setting "MDNX_API_FORCE_REAUTH" will execute the "mdnx_api.auth()" function regardless of the "cr_token.yml" file existing.
4. Added function "mdnx_api.test()" to the "MDNX_API" class. This will run every time the class get initialized unless the "MDNX_API_SKIP_TEST" is set to true. It will test the API response. If it comes back with a "token invalid" or something like that, it will force re-auth then continue with execution.

--- a/app/appdata/config/config.json
+++ b/app/appdata/config/config.json
@@ -1,10 +1,12 @@
 {
     "monitor-series-id": [],
     "app": {
-        "LOG_FILE": "appdata/logs/app.log",
         "SYSTEM": "windows",
         "TEMP_DIR": "appdata/temp",
         "BIN_DIR": "appdata/bin",
+        "LOG_FILE": "appdata/logs/app.log",
+        "MDNX_API_FORCE_REAUTH": false,
+        "MDNX_API_SKIP_TEST": false,
         "MDNX_SERVICE_USERNAME": "",
         "MDNX_SERVICE_PASSWORD": ""
     },
@@ -21,8 +23,13 @@
             "server": 1,
             "partsize": 3,
             "fileName": "${seriesTitle} - S${season}E${episode}",
-            "dubLang": ["eng", "jpn"],
-            "dlsubs": ["en"],
+            "dubLang": [
+                "eng",
+                "jpn"
+            ],
+            "dlsubs": [
+                "en"
+            ],
             "defaultAudio": "jpn",
             "timeout": 30000,
             "waittime": 3000,
