--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,12 @@
-name: Build & publish Docker image
+name: Build & publish Docker image (manual)
 
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        description: "Optional SemVer to tag the image with (e.g. 0.3.2)."
+        required: false
+        default: ""
 
 jobs:
   build:
@@ -13,25 +18,27 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Log in to GitHub Container Registry
-      - uses: docker/login-action@v3
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Generate tag list (SemVer & latest)
-      - uses: docker/metadata-action@v5
+      - name: Extract Docker metadata
         id: meta
+        uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
-            type=semver,pattern={{version}}
-            type=raw,value=latest,enable={{is_default_branch}}
+            # add the user-supplied SemVer **only if** one was provided
+            type=raw,value=${{ inputs.version }},enable={{ inputs.version != '' }}
+            # always add the moving latest tag
+            type=raw,value=latest
 
-      # Build & push
-      - uses: docker/build-push-action@v6
+      - name: Build & push image
         id: build
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
@@ -39,5 +46,5 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      # Print content-addressable digest
-      - run: echo "Digest -> ${{ steps.build.outputs.digest }}"
+      - name: Show digest
+        run: echo "Digest ⇒ ${{ steps.build.outputs.digest }}"
