--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,10 +1,10 @@
-name: Build & publish Docker image
+name: Build & publish Docker image (manual)
 
 on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Version tag"
+        description: "Version tag (e.g. 0.0.1)."
         required: false
         default: ""
 
@@ -31,10 +31,8 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
-            # add the user-supplied SemVer **only if** one was provided
-            type=raw,value=${{ inputs.version }},enable={{ inputs.version != '' }}
-            # always add the moving latest tag
             type=raw,value=latest
+            ${{ inputs.version != '' && format('type=raw,value={0}', inputs.version) || '' }}
 
       - name: Build & push image
         id: build
@@ -43,7 +41,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags:   ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Show digest
