Refactor config handling and update service naming
Removed the default config.json from appdata/default and updated the code to use appdata/config/config.json as the default config path. The entrypoint script now downloads a default config if missing, and logs instructions for the user. The docker-compose service was renamed from 'mdnx' to 'mdnx-auto-dl', and redundant environment variables were removed.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 services:
-  mdnx:
+  mdnx-auto-dl:
     image: ghcr.io/hypernylium/mdnx-auto-dl:latest
     container_name: mdnx-auto-dl
     restart: unless-stopped
@@ -10,5 +10,3 @@ services:
       - UID=1000
       - GID=1000
       - TZ=America/New_York
-      - CONFIG_FILE=/app/appdata/config/config.json
-      - QUEUE_FILE=/app/appdata/config/queue.json
