--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,10 @@
 services:
   mdnx-auto-dl:
+    # Build image locally if you want.
+    # Requires all files from repo to be present
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
     image: ghcr.io/hypernylium/mdnx-auto-dl:latest
     container_name: mdnx-auto-dl
     restart: unless-stopped
