Add option to skip queue in process_console_output
Updated MDNX_API.process_console_output to accept an add2queue parameter, allowing processed output to be optionally excluded from the queue manager. Modified the test method to use this option and log the processed output. Also updated docker-compose.yaml to add a new data volume and commented image reference.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,12 +5,14 @@ services:
     # build:
     #   context: .
     #   dockerfile: Dockerfile
+    # image: mdnx-auto-dl:latest
     image: ghcr.io/hypernylium/mdnx-auto-dl:latest
     container_name: mdnx-auto-dl
     restart: unless-stopped
     volumes:
       - ./appdata/logs:/app/appdata/logs:rw
       - ./appdata/config:/app/appdata/config:rw
+      - ./appdata/data:/data:rw
     environment:
       - UID=1000
       - GID=1000
