Refactor file transfer logic and update MainLoop usage
Refactored FileHandler to accept source and destination paths in the transfer method, ensuring destination directories are created as needed. Updated MainLoop to use the new transfer signature and improved error handling and logging. Also renamed remove to remove_temp_files for clarity. Minor improvements to docker-compose.yaml comments for clarity.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,15 @@
 services:
   mdnx-auto-dl:
-    # Build image locally if you want.
-    # Requires all files from repo to be present
+    ### Build image locally if you want.
+    ### Requires all files from repo to be present.
     # build:
     #   context: .
     #   dockerfile: Dockerfile
+
+    ### Use local image if you manually ran "docker build -t mdnx-auto-dl:latest ."
     # image: mdnx-auto-dl:latest
+
+    ### Use public image.
     image: ghcr.io/hypernylium/mdnx-auto-dl:latest
     container_name: mdnx-auto-dl
     restart: unless-stopped
