--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   mdnx-auto-dl:
     ### Build image locally if you want.
     ### Requires all files from repo to be present.
+    ### run "git clone https://github.com/HyperNylium/mdnx-auto-dl.git && cd mdnx-auto-dl" to get started
     # build:
     #   context: .
     #   dockerfile: Dockerfile
@@ -9,15 +10,28 @@ services:
     ### Use local image if you manually ran "docker build -t mdnx-auto-dl:latest ."
     # image: mdnx-auto-dl:latest
 
-    ### Use public image.
+    ### Use public image (recommended).
     image: ghcr.io/hypernylium/mdnx-auto-dl:latest
     container_name: mdnx-auto-dl
     restart: unless-stopped
     volumes:
+      # log file location
       - ./appdata/logs:/app/appdata/logs:rw
+
+      # mdnx-auto-dl config location.
+      # This will house config.json and queue.json.
       - ./appdata/config:/app/appdata/config:rw
+
+      # multi-download-nx config and widevine folder locations
+      # to keep cr_token.yml and make DRM decryption possible
       - ./appdata/mdnx/widevine:/app/appdata/bin/mdnx/widevine:rw
       - ./appdata/mdnx/config:/app/appdata/bin/mdnx/config:rw
+
+      # plex/jellyfin/emby anime storage location.
+      # I suggest to make a separate "active-anime" library and mount that here.
+      # Only modify the left side ("./appdata/data") not the right.
+      # Example:
+      #- /mnt/plexdata/active-anime:/data:rw
       - ./appdata/data:/data:rw
     environment:
       - UID=1000
