--- a/appdata/config/config.json
+++ b/appdata/config/config.json
@@ -5,6 +5,7 @@
         "BIN_DIR": "/app/appdata/bin",
         "LOG_FILE": "/app/appdata/logs/app.log",
         "DATA_DIR": "/data",
+        "FOLDER_STRUCTURE": "${seriesTitle}/Season ${season}/${seriesTitle} - S${seasonPadded}E${episodePadded}",
         "MDNX_API_FORCE_REAUTH": false,
         "MDNX_API_SKIP_TEST": false,
         "MDNX_SERVICE_USERNAME": "",
@@ -25,7 +26,7 @@
             "kstream": 1,
             "server": 1,
             "partsize": 3,
-            "fileName": "${seriesTitle} - S${season}E${episode}",
+            "fileName": "output",
             "dubLang": [
                 "eng",
                 "jpn"
@@ -44,9 +45,6 @@
         "dir-path": {
             "content": "/app/appdata/temp",
             "fonts": "./fonts/"
-        },
-        "gui": {
-            "port": 3000
         }
     }
 }
