Update folder structure and download settings in config
Changed FOLDER_STRUCTURE to use 'S${season}' format and enabled MAIN_LOOP_DOWNLOAD_SPECIAL_EPISODES in config.json. Also removed an unnecessary blank line in MDNX_API.py.

--- a/appdata/config/config.json
+++ b/appdata/config/config.json
@@ -5,14 +5,14 @@
         "BIN_DIR": "/app/appdata/bin",
         "LOG_FILE": "/app/appdata/logs/app.log",
         "DATA_DIR": "/data",
-        "FOLDER_STRUCTURE": "${seriesTitle}/Season ${season}/${seriesTitle} - S${seasonPadded}E${episodePadded}",
+        "FOLDER_STRUCTURE": "${seriesTitle}/S${season}/${seriesTitle} - S${seasonPadded}E${episodePadded}",
         "MDNX_API_FORCE_REAUTH": false,
         "MDNX_API_SKIP_TEST": false,
         "MDNX_SERVICE_USERNAME": "",
         "MDNX_SERVICE_PASSWORD": "",
         "MAIN_LOOP_UPDATE_INTERVAL": 3600,
         "MAIN_LOOP_BETWEEN_EPISODE_WAIT_INTERVAL": 20,
-        "MAIN_LOOP_DOWNLOAD_SPECIAL_EPISODES": false
+        "MAIN_LOOP_DOWNLOAD_SPECIAL_EPISODES": true
     },
     "mdnx": {
         "bin-path": {
