Handle special episodes in folder structure logic
Special episodes (season 0 or episode keys starting with 'S') are now placed in a dedicated folder as defined by SPECIAL_EPISODES_FOLDER_NAME in config. Updated MainLoop and Vars modules to consistently treat and organize special episodes, and added the new config option.

--- a/appdata/config/config.json
+++ b/appdata/config/config.json
@@ -6,6 +6,7 @@
         "LOG_FILE": "/app/appdata/logs/app.log",
         "DATA_DIR": "/data",
         "FOLDER_STRUCTURE": "${seriesTitle}/S${season}/${seriesTitle} - S${seasonPadded}E${episodePadded}",
+        "SPECIAL_EPISODES_FOLDER_NAME": "Special",
         "MDNX_API_FORCE_REAUTH": false,
         "MDNX_API_SKIP_TEST": false,
         "MDNX_SERVICE_USERNAME": "",
