Refactor config keys for clarity and consistency
Updated various configuration keys in config.json and corresponding code references for improved clarity and naming consistency. Keys such as MDNX_API_FORCE_REAUTH, MDNX_SERVICE_USERNAME, and MAIN_LOOP_UPDATE_INTERVAL were renamed to CR_FORCE_REAUTH, CR_USERNAME, and CHECK_FOR_UPDATES_INTERVAL, respectively. Adjusted logic in app.py, MDNX_API.py, and MainLoop.py to use the new config keys.

--- a/appdata/config/config.json
+++ b/appdata/config/config.json
@@ -5,15 +5,15 @@
         "BIN_DIR": "/app/appdata/bin",
         "LOG_FILE": "/app/appdata/logs/app.log",
         "DATA_DIR": "/data",
+        "CR_USERNAME": "",
+        "CR_PASSWORD": "",
         "FOLDER_STRUCTURE": "${seriesTitle}/S${season}/${seriesTitle} - S${seasonPadded}E${episodePadded}",
+        "DOWNLOAD_SPECIAL_EPISODES": false,
         "SPECIAL_EPISODES_FOLDER_NAME": "Special",
-        "MDNX_API_FORCE_REAUTH": false,
-        "MDNX_API_SKIP_TEST": false,
-        "MDNX_SERVICE_USERNAME": "",
-        "MDNX_SERVICE_PASSWORD": "",
-        "MAIN_LOOP_UPDATE_INTERVAL": 3600,
-        "MAIN_LOOP_BETWEEN_EPISODE_WAIT_INTERVAL": 20,
-        "MAIN_LOOP_DOWNLOAD_SPECIAL_EPISODES": true
+        "CHECK_FOR_UPDATES_INTERVAL": 3600,
+        "BETWEEN_EPISODE_DL_WAIT_INTERVAL": 20,
+        "CR_FORCE_REAUTH": false,
+        "CR_SKIP_API_TEST": false
     },
     "mdnx": {
         "bin-path": {
@@ -29,13 +29,14 @@
             "partsize": 3,
             "fileName": "output",
             "dubLang": [
-                "eng",
-                "jpn"
+                "jpn",
+                "eng"
             ],
             "dlsubs": [
                 "en"
             ],
             "defaultAudio": "jpn",
+            "defaultSub": "eng",
             "timeout": 30000,
             "waittime": 3000,
             "mp4": false,
