--- a/appdata/config/config.json
+++ b/appdata/config/config.json
@@ -7,6 +7,7 @@
         "DATA_DIR": "/data",
         "CR_USERNAME": "",
         "CR_PASSWORD": "",
+        "BACKUP_DUBS": ["zho"],
         "FOLDER_STRUCTURE": "${seriesTitle}/S${season}/${seriesTitle} - S${seasonPadded}E${episodePadded}",
         "DOWNLOAD_SPECIAL_EPISODES": false,
         "SPECIAL_EPISODES_FOLDER_NAME": "Special",
