--- a/appdata/config/config.json
+++ b/appdata/config/config.json
@@ -17,8 +17,7 @@
         "BETWEEN_EPISODE_DL_WAIT_INTERVAL": 30,
         "CR_FORCE_REAUTH": false,
         "CR_SKIP_API_TEST": false,
-        "NOTIFICATION_PREFERENCE": "ntfy",
-        "NTFY_SCRIPT_PATH": "/app/appdata/config/ntfy.sh"
+        "NOTIFICATION_PREFERENCE": "none"
     },
     "mdnx": {
         "bin-path": {
