Add new v/astream option to config.json
This will make it so you download CBR Video + 192 kbps Audio.

--- a/appdata/config/config.json
+++ b/appdata/config/config.json
@@ -48,7 +48,9 @@
             "nocleanup": false,
             "dlVideoOnce": false,
             "keepAllVideos": false,
-            "skipUpdate": true
+            "skipUpdate": true,
+            "vstream": "samsungtv",
+            "astream": "android"
         },
         "dir-path": {
             "content": "/app/appdata/temp",
