--- a/.github/workflows/docker-base.yml
+++ b/.github/workflows/docker-base.yml
@@ -7,16 +7,11 @@ permissions:
   contents: read
   packages: write
 
-env:
-  IMAGE_NAME: ghcr.io/${{ github.repository }}/mdnx-auto-dl-base
-
 jobs:
   build-base:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: docker/setup-qemu-action@v3
-      - uses: docker/setup-buildx-action@v3
 
       - name: Log in to GHCR
         uses: docker/login-action@v3
@@ -25,10 +20,20 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/hypernylium/mdnx-auto-dl-base
+          tags: |
+            type=raw,value=latest
+
       - name: Build & push base image
+        id: build
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile.base
           push: true
-          tags: ${{ env.IMAGE_NAME }}:latest
+          tags:   ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
