--- a/.github/workflows/docker-base.yml
+++ b/.github/workflows/docker-base.yml
@@ -1,25 +1,19 @@
-name: Build & push active image
+name: Build & push base image
 
 on:
   workflow_dispatch:
-    inputs:
-      version:
-        description: "Version tag (e.g. 0.0.1)."
-        required: false
-        default: ""
 
 permissions:
   contents: read
   packages: write
 
 jobs:
-  build-active-image:
+  build-base-image:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -30,20 +24,16 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: ghcr.io/hypernylium/mdnx-auto-dl-base
           tags: |
             type=raw,value=latest
-            ${{ inputs.version != '' && format('type=raw,value={0}', inputs.version) || '' }}
 
-      - name: Pull base image
-        run: docker pull ghcr.io/hypernylium/mdnx-auto-dl-base:latest || true
-
-      - name: Build & push image
+      - name: Build & push base image
         id: build
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Dockerfile
+          file: ./Dockerfile.base
           push: true
           tags:   ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
