--- a/.github/workflows/docker-active.yml
+++ b/.github/workflows/docker-active.yml
@@ -1,10 +1,10 @@
-name: Build & push active image
+name: Build active image
 
 on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Version tag (e.g. 0.0.1)."
+        description: "Version tag (e.g. 0.0.1)"
         required: false
         default: ""
 
@@ -17,7 +17,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -35,15 +34,12 @@ jobs:
             type=raw,value=latest
             ${{ inputs.version != '' && format('type=raw,value={0}', inputs.version) || '' }}
 
-      - name: Pull base image
-        run: docker pull ghcr.io/hypernylium/mdnx-auto-dl-base:latest || true
-
-      - name: Build & push image
-        id: build
+      - name: Build & push image (amd64)
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           push: true
+          platforms: linux/amd64
           tags:   ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
