--- a/.github/workflows/docker-base.yml
+++ b/.github/workflows/docker-base.yml
@@ -1,4 +1,4 @@
-name: Build & push base image
+name: Build base image
 
 on:
   workflow_dispatch:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Log in to GHCR
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -28,12 +28,12 @@ jobs:
           tags: |
             type=raw,value=latest
 
-      - name: Build & push base image
-        id: build
+      - name: Build & push image (amd64)
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile.base
           push: true
+          platforms: linux/amd64
           tags:   ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
