Add ONLY_CREATE_QUEUE option
Added option which allows for the creation of the queue.json without downloading anything. Good for if you want to see what the JSON output looks like or want to manually edit some episode_downloaded values to true.

--- a/appdata/config/config.json
+++ b/appdata/config/config.json
@@ -19,6 +19,7 @@
         "CR_SKIP_API_TEST": false,
         "NOTIFICATION_PREFERENCE": "none",
         "REMOVE_ALL_ACTIVE_STREAMS": false,
+        "ONLY_CREATE_QUEUE": false,
         "LOG_LEVEL": "info"
     },
     "mdnx": {
