Add media server library refreshing
After downloading episodes and refreshing already downloaded episodes that have new dubs/subs, you now have the option to refresh your plex or jellyfin library. If you only specify the server URL and auth token, it will trigger a refresh on all libraries. If you want to only refresh 1 library, you can set the override variable to true, and paste in the entire URL with the library refresh.

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -19,3 +19,7 @@ RUN apt-get update && \
 WORKDIR /app
 
 USER root
+
+COPY requirements.txt .
+
+RUN pip install --no-cache-dir -r requirements.txt
