--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,14 @@ name: Lint test
 on:
   push:
     branches: [master]
+    paths:
+      - "*.py"
+      - "**/*.py"
   pull_request:
     branches: [master]
+    paths:
+      - "*.py"
+      - "**/*.py"
 
 jobs:
   ruff-lint:
