--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -87,6 +87,9 @@ jobs:
           pull: true
           push: true
           platforms: linux/amd64
+          provenance: false
+          sbom: false
+          no-cache: true
           tags: |
             ${{ steps.vars.outputs.IMAGE }}:dev
             ${{ steps.vars.outputs.IMAGE }}:${{ steps.next.outputs.DEV_TAG }}
