--- a/.github/ISSUE_TEMPLATE/enhancement.yml
+++ b/.github/ISSUE_TEMPLATE/enhancement.yml
@@ -1,5 +1,5 @@
 name: Enhancement
-description: Suggest a enhancement or feature
+description: Suggest an enhancement or feature
 title: "[Enhancement]: "
 assignees:
   - HyperNylium
@@ -9,8 +9,8 @@ body:
   - type: textarea
     id: details
     attributes:
-      label: Tell me more about the enhancement/feature you want to see
-      description: Give me a as detailed as possible description of this enhancement/feature you want
+      label: Enhancement/feature description
+      description: Give me an as detailed as possible description of this enhancement/feature you want.
       placeholder: "I want to do... I would like this to work like..."
     validations:
       required: true
