Add playready support (#69)
Nothing really changed codebase-wise. 
Just added the correct bind-mounts and bind permissions to
`docker-compose.yaml` and the correct local folders under `appdata/`.

This has been tested with a SL2000 and SL3000 CDM key (provisioned as a
V3 device).
In both cases, multi-downloader-nx was able to find the key and decrypt
the video/audio.

Still uses mp4decrypt, not shaka-packager, as i was having issues with
it not fully decrypting the video/audio.
Not sure why that happened. But, mp4decrypt accepts playready CDMs too,
so no issue there.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,12 +8,9 @@ services:
       - ./appdata/logs:/app/appdata/logs:rw
 
       # mdnx-auto-dl config location.
-      # This will house config.json and queue.json.
       - ./appdata/config:/app/appdata/config:rw
 
-      # multi-download-nx config and widevine folder locations
-      # to keep cr_token.yml and make DRM decryption possible
-      - ./appdata/mdnx/widevine:/app/appdata/bin/mdnx/widevine:rw
+      # multi-download-nx config location
       - ./appdata/mdnx/config:/app/appdata/bin/mdnx/config:rw
 
       # plex/jellyfin/emby anime storage location.
@@ -21,6 +18,17 @@ services:
       # Example:
       #- /mnt/plexdata/Anime:/data:rw
       - ./appdata/data:/data:rw
+
+      ### This is the CDM part and is required to run
+      ### Please choose what CDM you have (widivine or playready)
+      ### and uncomment the correct bind-mount with your .bin/.pem files or .prd file inside.
+
+      ## Widivine
+      #- ./appdata/mdnx/widevine:/app/appdata/bin/mdnx/widevine:rw
+
+      ## Playready
+      #- ./appdata/mdnx/playready:/app/appdata/bin/mdnx/playready:rw
+
     environment:
       - UID=1000
       - GID=1000
