--- a/src/app/Dockerfile
+++ b/src/app/Dockerfile
@@ -17,14 +17,12 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
-
 USER root
 
 COPY requirements.txt .
-
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY src/app/ .
+COPY . .
 
 # Convert Windows line-endings (CRLF) to LF
 RUN sed -i 's/\r$//' /app/entrypoint.sh && chmod +x /app/entrypoint.sh
