--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -15,6 +15,17 @@ jobs:
         uses: actions/checkout@v5
         with:
           ref: dev
+          fetch-depth: 0
+
+      - name: Get dev git info
+        id: git
+        shell: bash
+        run: |
+          set -euo pipefail
+          echo "SHA=$(git rev-parse HEAD)" >> "$GITHUB_OUTPUT"
+          echo "SHA7=$(git rev-parse --short=7 HEAD)" >> "$GITHUB_OUTPUT"
+          echo "CREATED=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> "$GITHUB_OUTPUT"
+          echo "REF_NAME=refs/heads/dev" >> "$GITHUB_OUTPUT"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -30,6 +41,7 @@ jobs:
         id: vars
         shell: bash
         run: |
+          set -euo pipefail
           REPO_LC="${GITHUB_REPOSITORY,,}"
           OWNER="${GITHUB_REPOSITORY_OWNER}"
           PKG_NAME="${GITHUB_REPOSITORY#*/}"
@@ -37,7 +49,6 @@ jobs:
           echo "IMAGE=ghcr.io/${REPO_LC}" >> "$GITHUB_OUTPUT"
           echo "OWNER=${OWNER}" >> "$GITHUB_OUTPUT"
           echo "PKG=${PKG_LC}" >> "$GITHUB_OUTPUT"
-          echo "SHA7=${GITHUB_SHA::7}" >> "$GITHUB_OUTPUT"
 
       - name: Determine next dev tag
         id: next
@@ -48,31 +59,23 @@ jobs:
           set -euo pipefail
           OWNER="${{ steps.vars.outputs.OWNER }}"
           PKG="${{ steps.vars.outputs.PKG }}"
+
           get_versions() {
             gh api -H "Accept: application/vnd.github+json" "/orgs/${OWNER}/packages/container/${PKG}/versions?per_page=100" 2>/dev/null || \
             gh api -H "Accept: application/vnd.github+json" "/users/${OWNER}/packages/container/${PKG}/versions?per_page=100" 2>/dev/null || true
           }
+
           TAGS=$(get_versions | jq -r '.[]?.metadata.container.tags[]?' || true)
           LAST_NUM=$(printf "%s\n" "$TAGS" | sed -n 's/^dev-\([0-9]\+\)$/\1/p' | sort -n | tail -1 || true)
+
           if [[ -z "${LAST_NUM:-}" ]]; then
             NEXT_NUM=1
           else
             NEXT_NUM=$((LAST_NUM + 1))
           fi
+
           echo "DEV_TAG=dev-${NEXT_NUM}" >> "$GITHUB_OUTPUT"
           echo "Next dev tag: dev-${NEXT_NUM}"
-
-      - name: Extract Docker metadata (labels)
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ steps.vars.outputs.IMAGE }}
-          labels: |
-            org.opencontainers.image.title=${{ github.event.repository.name }}
-            org.opencontainers.image.description=${{ github.event.repository.description }}
-            org.opencontainers.image.source=${{ github.event.repository.html_url }}
-            org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.ref.name=refs/heads/dev
 
       - name: Build & push (amd64)
         id: docker_build
@@ -89,7 +92,15 @@ jobs:
           tags: |
             ${{ steps.vars.outputs.IMAGE }}:dev
             ${{ steps.vars.outputs.IMAGE }}:${{ steps.next.outputs.DEV_TAG }}
-          labels: ${{ steps.meta.outputs.labels }}
+          labels: |
+            org.opencontainers.image.title=${{ github.event.repository.name }}
+            org.opencontainers.image.description=${{ github.event.repository.description }}
+            org.opencontainers.image.source=${{ github.event.repository.html_url }}
+            org.opencontainers.image.licenses=${{ github.event.repository.license.spdx_id }}
+            org.opencontainers.image.created=${{ steps.git.outputs.CREATED }}
+            org.opencontainers.image.revision=${{ steps.git.outputs.SHA }}
+            org.opencontainers.image.ref.name=${{ steps.git.outputs.REF_NAME }}
+            org.opencontainers.image.version=${{ steps.next.outputs.DEV_TAG }}
 
       - name: Summarize
         shell: bash
@@ -97,4 +108,6 @@ jobs:
           echo "Built:"
           echo "  ${{ steps.vars.outputs.IMAGE }}:dev"
           echo "  ${{ steps.vars.outputs.IMAGE }}:${{ steps.next.outputs.DEV_TAG }}"
+          echo "Commit: ${{ steps.git.outputs.SHA }}"
+          echo "Ref: ${{ steps.git.outputs.REF_NAME }}"
           echo "Digest: ${{ steps.docker_build.outputs.digest }}"
